@@ -100,7 +100,7 @@ void debug()
 
 	i = 0;
 	for (const Plugin* p : plugins) {
-		if (p->isValid())
+		if (p->valid)
 			printf("    %d) %p - ID=%d name='%s'\n", i++, (void*)p, p->id, p->getName().c_str());
 		else
 			printf("    %d) %p - ID=%d INVALID\n", i++, (void*)p, p->id); 
