@@ -404,12 +404,6 @@ void writePlugins_(json_t* j)
 
 	for (const m::Plugin* p : model::plugins) {
 		
-		/* Brutally discard invalid plugins. TODO - might be wiser to save them
-		anyway so that they can be restored later on... */
-		
-		if (!p->isValid())
-			continue;
-
 		/* Plugin. */
 
 		json_t* jp = json_object();
