@@ -205,7 +205,7 @@ std::unique_ptr<Plugin> makePlugin(const std::string& fid, ID id)
 		gu_log("[pluginManager::makePlugin] no plugin found with fid=%s!\n", fid.c_str());
 		missingPlugins_ = true;
 		unknownPluginList_.push_back(fid);
-		return std::make_unique<Plugin>(pluginId_.get(id)); // Invalid plug-in
+		return std::make_unique<Plugin>(pluginId_.get(id), fid); // Invalid plug-in
 	}
 
 	juce::AudioPluginInstance* pi = pluginFormat_.createInstanceFromDescription(*pd, samplerate_, buffersize_);
@@ -213,7 +213,7 @@ std::unique_ptr<Plugin> makePlugin(const std::string& fid, ID id)
 		gu_log("[pluginManager::makePlugin] unable to create instance with fid=%s!\n", fid.c_str());
 		missingPlugins_ = true;
 		unknownPluginList_.push_back(fid);
-		return std::make_unique<Plugin>(pluginId_.get(id)); // Invalid plug-in
+		return std::make_unique<Plugin>(pluginId_.get(id), fid); // Invalid plug-in
 	}
 	gu_log("[pluginManager::makePlugin] plugin instance with fid=%s created\n", fid.c_str());
 
@@ -259,7 +259,7 @@ std::unique_ptr<Plugin> makePlugin(const Plugin& src)
 std::unique_ptr<Plugin> makePlugin(const patch::Plugin& p)
 {
 	std::unique_ptr<Plugin> plugin = makePlugin(p.path, p.id);
-	if (!plugin->isValid())
+	if (!plugin->valid)
 		return plugin; // Return invalid version
 	
 	/* Fill plug-in parameters. */
